--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <div>
                 <div>
                     <ul>
+                        <img src="assets/img/logos/1200px-Department_of_Education.svg.png" height="100px"alt="">
+                        <img src="assets/img/logos/DCSMNL-LOOGO.png" height="100px" alt="">
+                        <img src="assets/img/logos/ROXAS-LOGO.png" height="100px" alt="">
                         <li><a href="">Home</a></li>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Programs</a></li>
