--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@
                         <p class="lead mb-5">The first building of Roxas High School was situated in Quezon Boulevard near Feati University. It was established in 1948 and is the first high school to be named after a former president, Manuel Acuna Roxas. </p>
                         <p class="lead mb-5">The School has seven buildings - the Main (L-Shaped), Vocational, Maceda, Hizon, Home Economics, SEDP and Administration buildings and three makeshift structures, two of which are temporary.</p>
                         <p class="lead mb-5">The Main, Vocational, Macaeda and Hizon buildings house the academic subject classes. The H.E. building is now used by the Science and Technology Department. The SEDP building is where H.E. classes are held. One of the two Guidance offices, the Museum, and EMIS office occupy the Administration, Marcos-type, building.</p>
+                        <h1><a class="btn-learn-more" href="">Learn More</a></h1>
                     </div>
                 </div>
             </div>
         </section>
+        
         <!-- MANTRA CALL TO ACTION -->
         <section class="mantra-cta jarallax" data-jarallax data-speed="0.3">
             <div class="container">
@@ -104,7 +106,12 @@
                     </div>
                 </div>
             </div>
-        </section>                  
+        </section>
+
+        <section class="map">
+            
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.2888001537067!2d120.99631571536051!3d14.582612581425426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c98dfd834c1b%3A0x73ee77c0c7b383b6!2sManuel%20A.%20Roxas%20High%20School!5e0!3m2!1sfil!2sph!4v1628760323704!5m2!1sfil!2sph" width="100%" height="490px" style="border:0;" allowfullscreen="true" loading="lazy"></iframe>                
+        </section>
     </main>
     <!-- FOOTER -->
     <footer id="footer" class="footer">
