--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <!-- WELCOME VIDEO PARALLAX -->
-    <section id="welcome-hero" class="welcome-hero d-flex align-items-center justify-content-center jarallax" data-jarallax data-speed="0.5" data-jarallax-video="mp4:assets/video/video.mp4">
+    <section id="welcome-hero" class="welcome-hero d-flex align-items-center justify-content-center jarallax" data-jarallax data-jarallax-video="mp4:assets/video/video.mp4">
         <div class="container d-flex align-items-center justify-content-center">
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-md-12" data-aos="zoom-in">
@@ -64,9 +64,9 @@
             <div>
                 <div>
                     <ul>
-                        <img src="assets/img/logos/1200px-Department_of_Education.svg.png" height="85px"alt="">
-                        <img src="assets/img/logos/DCSMNL-LOOGO.png" height="85px" alt="">
-                        <img src="assets/img/logos/ROXAS-LOGO.png" height="85px" alt="">
+                        <a href="https://www.deped.gov.ph/" target="_blank"><img src="assets/img/logos/1200px-Department_of_Education.svg.png" height="85px"alt=""></a>
+                        <a href="https://www.depedmanila.net/" target="_blank"><img src="assets/img/logos/DCSMNL-LOOGO.png" height="85px" alt="">
+                        <a href="https://www.facebook.com/roxasshsmanila" target="_blank"><img src="assets/img/logos/ROXAS-LOGO.png" height="85px" alt=""></a>
                         <li><a href="">Home</a></li>
                         <li><a href="">About Us</a></li>
                         <li><a href="">Programs</a></li>
